# student-search

./: .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  eval_updated.py  main_updated.py  pyproject.toml  requirements.txt  sar_env_updated.py  train_updated.py
.github/workflows/: ci.yml  codecov.yml  docker-build.yml  docker.yml
MA/: Mraidi Mohamed Amin.pptx  README.md
MA/SAR/: main.py
MA/SAR/core/: core.py
MA/SAR/sar_v0/: env_sar_mod.py  simple_env_mod.py
MA/SAR/sar_v1/: env_sar_mod.py  fog.py  simple_env_mod.py
MA/logs_300/PPO_1/: events.out.tfevents.1702533131.DESKTOP-K5B98CG.6316.0
RA/: Rashad Abdulkhaligov.pptx  eval.py  main.py  sar_env.py  train.py
conf/: config.yaml
docker/: Dockerfile
src/: curriculum.py  eval.py  landmark.py  logger.py  main.py  metrics.py  models.py  sar_env.py  seed_utils.py  train.py
src/app/: eval.py  main.py  train.py
src/domain/: agent.py  sar_env.py  victim.py
src/infra/: config.py  logging_tb.py
tests/: conftest.py  test_env_smoke.py  test_vision.py
